# central_Inteligence

./: .gitignore  README.md  dev_documentation.txt  pyproject.toml
C:/Users/ShreyesPrabhuDesai/PersProjects/central_Inteligence/data/: emails.db
data/: emails.db
src/: EmailMetadata.py  GraphConnector.py  IMAPConnector.py  MongoDBHandler.py  SQLiteHandler.py  SarvamClient.py  mcp_server.py  run_process.py  web_api.py
src/attachments/: __init__.py  attachment_handler.py  chunking.py  document_extractors.py
src/rag/: __init__.py  mongo_vectors.py  query_service.py  sqlite_search.py
src/tools/: embedding_processor.py
tests/: __init__.py  test_fts_search.py  test_query_service.py  test_thread_rag.py  test_vector_rerank.py
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/email/[id]/: page.tsx
