[project]
name = "mcp-server-outlook-email"
version = "0.1.0"
description = "Email Processing MCP Server with MongoDB integration"
dependencies = [
    "python-dotenv",
    "pymongo",
    "fastmcp",
    "pydantic",
    "pytz",
    "imapclient",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
