[project]
name = "mcp-server-outlook-email"
version = "0.1.0"
description = "Email Processing MCP Server with MongoDB integration"
dependencies = [
    "python-dotenv",
    "pymongo",
    "fastmcp",
    "pydantic",
    "pytz",
    "imapclient",
    "requests",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "python-magic>=0.4.27",
    "chardet>=5.0.0",
    "msal>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
